--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^15.0.1",
     "react-addons-css-transition-group": "^15.0.2",
     "react-dom": "^15.0.1",
-    "react-router": "^2.4.0"
+    "react-router": "^2.4.0",
+    "react-svg-loader": "^1.1.1",
+    "svg-url-loader": "^1.1.0"
   }
 }
